# dd2-server

./: .gitignore  .twitch.example  Cargo.toml  dd2-server.service  due-diligence-report.md  events.txt  gen_timeline_graphs.ipynb  gen_timeline_graphs.py  gen_vehicle_state_graphs.py  gen_wr_over_time.py  get-vod-ts.py  init-server.sh  logs.sh  run.sh  server-setup.sh  update-server.sh  update.sh
.cargo/: config.toml
migration/: Cargo.toml
migrations/: 20240429044116_create_init_tables.down.sql  20240429044116_create_init_tables.up.sql  20240503010407_patch_migration_2.down.sql  20240503010407_patch_migration_2.up.sql  20240503043231_ranked_lb_view.down.sql  20240503043231_ranked_lb_view.up.sql  20240503051323_ranked_stats_view.down.sql  20240503051323_ranked_stats_view.up.sql  20240504000454_shadow-ban.down.sql  20240504000454_shadow-ban.up.sql  20240505025633_user_to_context.down.sql  20240505025633_user_to_context.up.sql  20240506114636_server_player_counts.down.sql  20240506114636_server_player_counts.up.sql  20240507011001_util_views.down.sql  20240507011001_util_views.up.sql  20240507045342_latest_height.down.sql  20240507045342_latest_height.up.sql  20240508040522_user_recent_sessions.down.sql  20240508040522_user_recent_sessions.up.sql  20240508154204_donations.down.sql  20240508154204_donations.up.sql  20240510030248_fix_ranked_view.down.sql  20240510030248_fix_ranked_view.up.sql  20240510030299_NOTE.txt  20240510050626_colors.down.sql  20240510050626_colors.up.sql  20240510133147_gfm-donations.down.sql  20240510133147_gfm-donations.up.sql  20240511043714_twitch_usernames.down.sql  20240511043714_twitch_usernames.up.sql  20240513022525_context_indexes.down.sql  20240513022525_context_indexes.up.sql  20240520205034_maps-unique-index.down.sql  20240520205034_maps-unique-index.up.sql  20240523093241_rem_falls_ixs.down.sql  20240523093241_rem_falls_ixs.up.sql  20240524013159_default-twitch-names.up.sql  20240527032643_shallow-dip-heights.down.sql  20240527032643_shallow-dip-heights.up.sql  (+37 more)
server/: docker-compose.yml  restart.sh  restart_quiet.sh
src/: api_error.rs  cache_util.rs  clean_db.rs  consts.rs  donations.rs  http.rs  main.rs  op_auth.rs  player.rs  queries.rs  router.rs  server.rs  server2.rs  server_conn_mgr.rs
src/queries/: api.rs  auth.rs  clips.rs  context.rs  custom_map_aux_specs.rs  custom_maps.rs  stats.rs  (+1 more)
