[package]
name = "dd2-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dd2-server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
log = "0.4.21"
env_logger = "0.11.3"
bitflags = "2.5.0"
serde = { version = "1.0.199", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
lazy_static = "1.4.0"
lru = "0.12.3"
reqwest = "0.12.4"
