[package]
name = "dd2-server"
version = "0.4.20"
edition = "2021"

[[bin]]
name = "dd2-server"
path = "src/server.rs"

[[bin]]
name = "dd2-server2"
path = "src/server2.rs"

[[bin]]
name = "dd2-clean-db"
path = "src/clean_db.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
bitflags = "2.5.0"
serde = { version = "1.0.199", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
lazy_static = "1.4.0"
lru = "0.12.3"
reqwest = { version = "0.12.4", features = ["json", "socks"] }
# sqlx-postgres = "0.7.4"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
    "uuid",
    "time",
    "bigdecimal",
] }
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v7"] }
base64 = "0.22.1"
warp = "0.3.7"
lets-encrypt-warp = "0.3.0"
hex = "0.4.3"
tokio-graceful-shutdown = "0.15.0"
miette = { version = "7.2.0", features = ["fancy"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
thiserror = "1.0.59"
supports-color = "3.0.0"
hostname = "0.4.0"
num-traits = "0.2.19"
